--- a/content/blank.html
+++ b/content/blank.html
@@ -7,9 +7,9 @@ description: Test description
 {% extends "topbar.j2" %}
 
 {% block container %}
-## Main content
 
-[hyde-bootstrap](http://github.com/auzigog/hyde-bootstrap/) is a layout for Hyde based on the Bootstrap framework.
+## Page name
 
-This particular page is based on Bootstrap's [fluid.html.html](http://twitter.github.io/bootstrap/examples/fluid.html) example.
+This page is under construction.
+
 {% endblock container %}
